--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,6 +58,12 @@ spring:
     oauth2:      
       client:
         registration:
+          google:
+            clientId: ${GOOGLE_CLIENT_ID}
+
+            clientSecret: ${GOOGLE_CLIENT_SECRET}
+            redirectUri: "http://localhost:8088/login/oauth2/code/google"
+
           facebook:
             clientId: YOUR_FACEBOOK_APP_ID
             clientSecret: YOUR_FACEBOOK_APP_SECRET
