--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,7 +62,7 @@ spring:
             client-id: ${GOOGLE_CLIENT_ID}
 
             client-secret: ${GOOGLE_CLIENT_SECRET}
-            redirect-uri: "${GOOGLE_REDIRECT_URI:http://localhost:4200}"
+            redirect-uri: "${GOOGLE_REDIRECT_URI:http://localhost:4200/auth/google/callback}"
 #            redirectUri: "localhost://{api.prefix}/login/oauth2/code/google"
             resource-server:
               opaque-token:
